objects/ActivityPointSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>ActivitySource__c</fullName>
        <label>Activity Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitySubType__c</fullName>
        <label>Activity SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>Custom Activity Type field value (not the standard Type field on Activity)</description>
        <inlineHelpText>Custom Activity Type field value (not the standard Type field on Activity)</inlineHelpText>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestCase__c</fullName>
        <description>Type YES is if this is a test case.  Test cases are used in the apex test class to make sure that all iterations of the logic are covered.</description>
        <label>Test Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Configuration for the calculation of activity points.  These configurations are related to values on Task at time of creation or update.  Blanks act as wild-cards.  Please do not delete rows that are marked as Test Cases.</description>
    <label>Activity Point Setting</label>
    <pluralLabel>Activity Point Settings</pluralLabel>
    <listViews>
        <fullName>All_Full_View</fullName>
        <columns>MasterLabel</columns>
        <columns>ActivityType__c</columns>
        <columns>ActivitySubType__c</columns>
        <columns>ActivitySource__c</columns>
        <columns>Points__c</columns>
        <columns>TestCase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Full View</label>
    </listViews>
</CustomObject>